Added RV, Adapter and recipe list display. Also added a screen for displaying recipe details.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ def navGraphVersion = "2.5.3"
 def bindingDelegateVersion = "1.5.6"
 def roomVersion = "2.5.0"
 def materialVersion = "1.8.0"
+def glideVersion = "4.14.2"
 
 dependencies {
     implementation "com.google.dagger:hilt-android:$hiltVersion"
@@ -89,6 +90,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
 
     implementation "com.google.android.material:material:$materialVersion"
+
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
